--- a/index.html
+++ b/index.html
@@ -5,22 +5,215 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/style.css" class="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Phudu:wght@300..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Phudu:wght@300..900&display=swap" rel="stylesheet">
   <title>Hành trình Bách Khoa</title>
 </head>
 <body>
-  <div id="first">
-    <div class="conner-right">
-      <img src="/assets/images/right-conner.png" alt="right-conner" class="">
-    </div>
-    <div class="logo">
-      <img src="/assets/images/logo.png" alt="Logo Đại học Bách Khoa TP.HCM" class="">
-      <p class="">Hành trình Bách Khoa</p>
-    </div>
-    <div class="conner-left">
-      <img src="/assets/images/left-conner.png" alt="left-conner" class="">
+  <div class="first-container">
+    <div id="first">
+      <div class="conner-right">
+        <img src="/assets/images/cloud_blue.png" alt="right-conner" class="">
+      </div>
+      <div class="logo">
+        <img src="/assets/images/logo.png" alt="Logo Đại học Bách Khoa TP.HCM" class="">
+        <p class="">Hành trình Bách Khoa</p>
+      </div>
+      <div class="conner-left">
+        <img src="/assets/images/cloud_blue.png" alt="left-conner" class="">
+      </div>
+      <div class="conner-left" style="top:5px; left:10vw;">
+        <img src="/assets/images/cloud_blue.png" alt="left-conner" class="" style="width: 10vw;">
+      </div>
     </div>
   </div>
+
+  <div id="second"></div>
+  <div class="" style="background-color: white; z-index: 3; position: relative;">
+    <div id="third">
+        <div class="snows">
+            <div class="snow-1"></div>
+            <div class="snow-2"></div>
+            <div class="snow-3"></div>
+        </div>
+        <div id="btn-auto">
+          <div class="btn-auto__content">
+            Bấm cái này nếu bạn lười scroll...
+          </div>
+
+        </div>
+        <div class="chap-1">
+          <div class="accent flex flex-col align-center" style="margin: 0 auto">
+            <p>Đậu Bách Khoa</p>
+            <p>Lúc này cảm giác rất xa lạ...</p>
+          </div>
+          <div class="border-dot" style="margin: 0 auto">
+            <img src="/assets/images/acceptance.png" alt="">
+          </div>
+
+        </div>
+        <div class="relative flex justify-center">
+          <div class="snow-3"></div>
+          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+        </div>
+        <div class="chap-2">
+          <div class="accent flex flex-col align-center" style="margin: 0 auto">
+            <p>Bắt đầu chuỗi ngày học <span style="padding: 0 0 0 -1em;"><span style="font-size:3px">và ăn</span> hành</span></p>
+
+          </div>
+        </div>
+        <div class="relative flex justify-center">
+          <img src="/assets/images/line-2.png" alt="" style="width: 5vw;">
+          <div class="snow-1"></div>
+          <div class="tree" style="top:50%;right: 10vw;"></div>
+        </div>
+
+        <div class="chap-3">
+          <div class="border-dot" style="border-radius: 5px;">
+            <img src="/assets/images/cse-connection.jpg" alt="cse-connection" class="">
+          </div>
+          <div class="accent">
+           <p class="">CSE CONNECTION</p>
+           <p class="">zui zui zui</p>
+          </div>
+        </div>
+        <div class="relative flex justify-center">
+          <img src="/assets/images/line-3.png" alt="" style="width: 25vw;">
+          <div class="snow-2"></div>
+        </div>
+
+        <div class="chap-3">
+          <div class="accent">
+            <p class="">Quân sự</p>
+            <p class="">zui zui zui</p>
+           </div>
+          <div class="border-dot" style="border-radius: 5px;transform: rotate(10deg);">
+            <img src="/assets/images/milaritt.jpg" alt="cse-connection" class="">
+          </div>
+
+        </div>
+
+        <div class="flex justify-center">
+          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+        </div>
+
+        <div class="chap-4">
+          <div class="border-dot" style="border-radius: 20px;">
+            <img src="/assets/images/study.gif" alt="study" class="">
+          </div>
+          <div class="accent">
+           <p class="">Ôn thi</p>
+           <p class="">ko zui ko zui ko zui</p>
+          </div>
+        </div>
+
+        <div class="relative flex justify-center">
+          <img src="/assets/images/line-4.png" alt="" style="width: 25vw;">
+          <div class="snow-2"></div>
+          <div class="snow-1"></div>
+          <div class="tree" style="top:5em;right: 18vw;transform: rotate(5deg);"></div>
+          <div class="tree" style="top:4em;right: 13vw;transform: rotate(5deg)"></div>
+        </div>
+
+        <div class="chap-5">
+          <div class="flex flex-row" style="gap: 10px">
+            <div class="border-dot" style="border-radius: 20px;background-color: white;">
+              <img src="/assets/images/xtn.png" alt="study" class="">
+
+            </div>
+            <div class="border-dot" style="border-radius: 20px; transform: rotate(10deg);background-color: white;">
+              <img src="/assets/images/blood.jpg" alt="blood" class="">
+            </div>
+          </div>
+
+
+          <div class="accent">
+           <p class="">Cày CTXH</p>
+
+          </div>
+        </div>
+
+        <div class="flex justify-center">
+          <img src="/assets/images/line-2.png" alt="" style="width: 5vw;">
+        </div>
+
+        <div class="chap-6">
+          <div class="border-dot" style="border-radius: 20px;">
+            <img src="/assets/images/jobfair.jpg" alt="jobfair" class="">
+          </div>
+          <div class="accent">
+           <p class="">Loot quà</p>
+          </div>
+        </div>
+
+        <div class="flex justify-center">
+          <img src="/assets/images/line-3.png" alt="" style="width: 25vw;">
+        </div>
+
+        <div class="chap-7">
+          <div class="border-dot" style="border-radius: 20px;">
+            <img src="/assets/images/mhx.jpg" alt="Mùa hè xanh" class="">
+          </div>
+          <div class="accent">
+           <p class="">Mùa hè xanh</p>
+           <p class="">Đi vì CTXH nhưng nhận được nhiều hơn thế</p>
+          </div>
+        </div>
+        <div class="flex justify-center">
+          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+        </div>
+
+        <div class="chap-8">
+          <div class="border-dot" style="border-radius: 20px;">
+            <img src="/assets/images/thesis.png" alt="Đồ án" class="">
+          </div>
+          <div class="accent">
+           <p class="">Đồ án chill chill</p>
+          </div>
+        </div>
+
+
+
+
+    </div>
+    <div id="fourth">
+      <div class="forest">
+
+      </div>
+      <div class="chap-n">
+        <div class="flex flex-col align-center" style="margin: 10px auto; gap: 2em">
+          <div class="">
+            <p>.</p>
+          <p>.</p>
+          <p>.</p>
+          </div>
+          <div class="text-center">
+            <p>Ngày tháng trôi theo nhịp điệu chậm rãi</p>
+            <p>nhưng lại khiến mình không kịp nhận ra đã dần quen với ngôi trường này</p>
+            <p>Dần quen việc ngủ ở hành lang... đôi khi là trong lớp học</p>
+            <p>Dần quen việc nhận những con điểm 10 bẻ đôi</p>
+            <p>Dần quen việc tự nghiên cứu</p>
+            <p>Dần quen chạy deadline</p>
+          </div>
+
+          <div class="text-center">
+            <p>Bách Khoa dạy mình nhiều lắm, có những thứ đến tận cuối hành trình này mình mới nhận ra được!</p>
+          </div>
+
+          <div class="text-center">
+            <p>Và để có thể khép lại hành trình này một cách trọn vẹn, con/em/mình thân mời mọi người đến chung vui và chụp những tấm hình kỷ niệm tại buổi lễ tốt nghiệp.</p>
+          </div>
+
+
+        </div>
+        <div class="flex justify-center">
+          <img src="/assets/images/invitation.png" class="invitation">
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <script src="/js/main.js"></script>
 </body>
 </html>
