[Feat] Update path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css" class="">
+  <link rel="stylesheet" href="./styles/style.css" class="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Phudu:wght@300..900&display=swap" rel="stylesheet">
@@ -13,17 +13,17 @@
   <div class="first-container">
     <div id="first">
       <div class="conner-right">
-        <img src="/assets/images/cloud_blue.png" alt="right-conner" class="">
+        <img src="./assets/images/cloud_blue.png" alt="right-conner" class="">
       </div>
       <div class="logo">
-        <img src="/assets/images/logo.png" alt="Logo Đại học Bách Khoa TP.HCM" class="">
+        <img src="./assets/images/logo.png" alt="Logo Đại học Bách Khoa TP.HCM" class="">
         <p class="">Hành trình Bách Khoa</p>
       </div>
       <div class="conner-left">
-        <img src="/assets/images/cloud_blue.png" alt="left-conner" class="">
+        <img src="./assets/images/cloud_blue.png" alt="left-conner" class="">
       </div>
       <div class="conner-left" style="top:5px; left:10vw;">
-        <img src="/assets/images/cloud_blue.png" alt="left-conner" class="" style="width: 10vw;">
+        <img src="./assets/images/cloud_blue.png" alt="left-conner" class="" style="width: 10vw;">
       </div>
     </div>
   </div>
@@ -48,13 +48,13 @@
             <p>Lúc này cảm giác rất xa lạ...</p>
           </div>
           <div class="border-dot" style="margin: 0 auto">
-            <img src="/assets/images/acceptance.png" alt="">
+            <img src="./assets/images/acceptance.png" alt="">
           </div>
 
         </div>
         <div class="relative flex justify-center">
           <div class="snow-3"></div>
-          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-1.png" alt="" style="width: 25vw;">
         </div>
         <div class="chap-2">
           <div class="accent flex flex-col align-center" style="margin: 0 auto">
@@ -63,14 +63,14 @@
           </div>
         </div>
         <div class="relative flex justify-center">
-          <img src="/assets/images/line-2.png" alt="" style="width: 5vw;">
+          <img src="./assets/images/line-2.png" alt="" style="width: 5vw;">
           <div class="snow-1"></div>
           <div class="tree" style="top:50%;right: 10vw;"></div>
         </div>
 
         <div class="chap-3">
           <div class="border-dot" style="border-radius: 5px;">
-            <img src="/assets/images/cse-connection.jpg" alt="cse-connection" class="">
+            <img src="./assets/images/cse-connection.jpg" alt="cse-connection" class="">
           </div>
           <div class="accent">
            <p class="">CSE CONNECTION</p>
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="relative flex justify-center">
-          <img src="/assets/images/line-3.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-3.png" alt="" style="width: 25vw;">
           <div class="snow-2"></div>
         </div>
 
@@ -88,18 +88,18 @@
             <p class="">zui zui zui</p>
            </div>
           <div class="border-dot" style="border-radius: 5px;transform: rotate(10deg);">
-            <img src="/assets/images/milaritt.jpg" alt="cse-connection" class="">
+            <img src="./assets/images/milaritt.jpg" alt="cse-connection" class="">
           </div>
 
         </div>
 
         <div class="flex justify-center">
-          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-1.png" alt="" style="width: 25vw;">
         </div>
 
         <div class="chap-4">
           <div class="border-dot" style="border-radius: 20px;">
-            <img src="/assets/images/study.gif" alt="study" class="">
+            <img src="./assets/images/study.gif" alt="study" class="">
           </div>
           <div class="accent">
            <p class="">Ôn thi</p>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="relative flex justify-center">
-          <img src="/assets/images/line-4.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-4.png" alt="" style="width: 25vw;">
           <div class="snow-2"></div>
           <div class="snow-1"></div>
           <div class="tree" style="top:5em;right: 18vw;transform: rotate(5deg);"></div>
@@ -118,11 +118,11 @@
         <div class="chap-5">
           <div class="flex flex-row" style="gap: 10px">
             <div class="border-dot" style="border-radius: 20px;background-color: white;">
-              <img src="/assets/images/xtn.png" alt="study" class="">
+              <img src="./assets/images/xtn.png" alt="study" class="">
 
             </div>
             <div class="border-dot" style="border-radius: 20px; transform: rotate(10deg);background-color: white;">
-              <img src="/assets/images/blood.jpg" alt="blood" class="">
+              <img src="./assets/images/blood.jpg" alt="blood" class="">
             </div>
           </div>
 
@@ -134,12 +134,12 @@
         </div>
 
         <div class="flex justify-center">
-          <img src="/assets/images/line-2.png" alt="" style="width: 5vw;">
+          <img src="./assets/images/line-2.png" alt="" style="width: 5vw;">
         </div>
 
         <div class="chap-6">
           <div class="border-dot" style="border-radius: 20px;">
-            <img src="/assets/images/jobfair.jpg" alt="jobfair" class="">
+            <img src="./assets/images/jobfair.jpg" alt="jobfair" class="">
           </div>
           <div class="accent">
            <p class="">Loot quà</p>
@@ -147,12 +147,12 @@
         </div>
 
         <div class="flex justify-center">
-          <img src="/assets/images/line-3.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-3.png" alt="" style="width: 25vw;">
         </div>
 
         <div class="chap-7">
           <div class="border-dot" style="border-radius: 20px;">
-            <img src="/assets/images/mhx.jpg" alt="Mùa hè xanh" class="">
+            <img src="./assets/images/mhx.jpg" alt="Mùa hè xanh" class="">
           </div>
           <div class="accent">
            <p class="">Mùa hè xanh</p>
@@ -160,12 +160,12 @@
           </div>
         </div>
         <div class="flex justify-center">
-          <img src="/assets/images/line-1.png" alt="" style="width: 25vw;">
+          <img src="./assets/images/line-1.png" alt="" style="width: 25vw;">
         </div>
 
         <div class="chap-8">
           <div class="border-dot" style="border-radius: 20px;">
-            <img src="/assets/images/thesis.png" alt="Đồ án" class="">
+            <img src="./assets/images/thesis.png" alt="Đồ án" class="">
           </div>
           <div class="accent">
            <p class="">Đồ án chill chill</p>
@@ -207,13 +207,13 @@
 
         </div>
         <div class="flex justify-center">
-          <img src="/assets/images/invitation.png" class="invitation">
+          <img src="./assets/images/invitation.png" class="invitation">
         </div>
       </div>
 
     </div>
 
   </div>
-  <script src="/js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
